# scopuli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: CMakeLists.txt  bench.cpp
inc/scopuli/: scopuli.hpp  status_code.hpp  version.hpp
src/: scopuli.cpp
test/: CMakeLists.txt  http_server_test.cpp
